# SourceRenderer

./: .gitignore  .gitmodules  Cargo.toml  LICENSE.md  LICENSE_spatiotemporal_blue_noise.md  README.md
build_util/: Cargo.toml
build_util/src/: android.rs  build_script_logger.rs  lib.rs  main.rs  shader_compiler.rs  spirv_transformer.rs
build_util/src/spirv_transformer/: mod.rs
core/: Cargo.toml
core/shaders/: simple.frag.glsl  simple.frag.spv  simple.hlsl  simple.vert.hlsl  simple.vert.spv
core/src/: align.rs  atomic_refcell.rs  cast.rs  console.rs  engine.rs  fixed_size_vec.rs  half_vec.rs  input.rs  lib.rs  page_cache.rs  platform.rs  pool.rs
core/src/asset/: level.rs  mod.rs
core/src/assets/: asset.rs  level.rs
core/src/gpu/: backend.rs  buffer.rs  command.rs  descriptor_heap.rs  device.rs  format.rs  heap.rs  instance.rs  mod.rs  pipeline.rs  query.rs  queue.rs  renderpass.rs  rt.rs  shader_metadata.rs  swapchain.rs  sync.rs  texture.rs
core/src/graphics/: backend.rs  buffer.rs  command.rs  context.rs  device.rs  format.rs  graph.rs  graph_template.rs  instance.rs  mod.rs  pipeline.rs  renderpass.rs  resource.rs  rt.rs  surface.rs  sync.rs  texture.rs
core/src/job/: job.rs  jobthread.rs  mod.rs  scheduler.rs
core/src/platform/: input.rs  io.rs  mod.rs
core/src/renderer/: format.rs  mod.rs  rendercontext.rs  renderer.rs  renderpass.rs  resource.rs
engine/: Cargo.toml  build.rs
engine/shaders/: camera.inc.glsl  cas.comp.glsl  clustered_shading.inc.glsl  clustering.comp.glsl  compositing.comp.glsl  compositing.frag.glsl  consts.inc.glsl  copy_camera.comp.glsl  culling.comp.glsl  culling.inc.glsl  dear_imgui.frag.glsl  dear_imgui.vert.glsl  descriptor_sets.h  descriptor_sets.inc.glsl  draw_prep.comp.glsl  ffx_downsampler.comp.glsl  ffx_spd.h  frame_set.inc.glsl  fullscreen_quad.vert.glsl  geometry.web.frag.glsl  geometry.web.vert.glsl  geometry_bindless.frag.glsl  geometry_bindless.vert.glsl  gpu_scene.inc.glsl  hi_z_copy.comp.glsl  hi_z_gen.comp.glsl  hi_z_gen_filter.comp.glsl  irradiance_probe.inc.glsl  light_binning.comp.glsl  marching_cubes.comp.glsl  motion_vectors_vis_buf.comp.glsl  occlusion.vert.glsl  path_tracer.comp.glsl  pbr.inc.glsl  prepass.frag.glsl  prepass.vert.glsl  shading.comp.glsl  shadow_map.vert.glsl  shadow_map_bindless.vert.glsl  shadows.rchit.glsl  (+31 more)
engine/src/: asset_manager.rs  async_counter.rs  bevy_main.rs  bufreader.rs  camera.rs  engine.rs  engine_old.rs  fps_camera.rs  game.rs  game_internal.rs  input.rs  lib.rs  msg.rs  rw_lock_wasm.rs  rw_lock_wasm_debug.rs  scene.rs  spinning_cube.rs  tasks.rs  ui.rs  wasm.rs
engine/src/asset/: asset_buffer.rs  asset_data.rs  asset_manager.rs  asset_manager_plugin.rs  asset_types.rs  fixed_byte_size_cache.rs  handle_map.rs  level.rs  loaded_level.rs  mod.rs
engine/src/asset/loaders/: bsp_level.rs  csgo_loader.rs  fs_container.rs  image_loader.rs  mdl_loader.rs  mod.rs  pakfile_container.rs  (+6 more)
engine/src/graphics/: allocator.rs  bindless.rs  buffer.rs  command.rs  context.rs  destroyer.rs  device.rs  graphics_plugin.rs  instance.rs  memory.rs  mod.rs  pipeline.rs  query.rs  queue.rs  rt.rs  sampler.rs  swapchain.rs  sync.rs  texture.rs  tlsf.rs  tlsf_allocator.rs  transfer.rs  transient_buffer.rs  util.rs
engine/src/job/: scheduler.rs
engine/src/math/: bounding_box.rs  frustum.rs  mod.rs
engine/src/physics/: mod.rs
engine/src/renderer/: asset.rs  asset_buffer.rs  asset_integrator.rs  camera.rs  command.rs  drawable.rs  ecs.rs  late_latch_camera.rs  late_latching.rs  light.rs  mod.rs  render_path.rs  renderable.rs  renderer.rs  renderer_assets.rs  renderer_culling.rs  renderer_internal.rs  renderer_plugin.rs  renderer_resources.rs  renderer_scene.rs  renderpass.rs  renderthread.rs  shader_manager.rs  vertex.rs
engine/src/transform/: interpolation.rs  interpolation_old.rs  mod.rs  transform.rs
game/: Cargo.toml
game/src/: fps_camera.rs  lib.rs  plugin.rs  spinning_cube.rs
graphics/d3d12/: Cargo.toml
graphics/d3d12/src/: backend.rs  buffer.rs  command.rs  descriptor.rs  device.rs  heap.rs  instance.rs  lib.rs  queue.rs  sync.rs  texture.rs
graphics/metal/: Cargo.toml  build.rs  default.metallib
graphics/metal/meta_shaders/: blit.frag.glsl  blit.frag.json  mdi.ir  mdi.metal
graphics/metal/src/: backend.rs  binding.rs  bindless.rs  buffer.rs  command.rs  device.rs  format.rs  heap.rs  instance.rs  lib.rs  meta.rs  pipeline.rs  query.rs  queue.rs  renderpass.rs  rt.rs  shared.rs  swapchain.rs  sync.rs  texture.rs
graphics/vulkan/: Cargo.toml  build.rs
graphics/vulkan/meta_shaders/: clear_buffer.comp.glsl  clear_buffer.comp.spv
graphics/vulkan/src/: adapter.rs  backend.rs  bindless.rs  buffer.rs  command.rs  context.rs  descriptor.rs  device.rs  format.rs  graph.rs  graph_template.rs  heap.rs  instance.rs  lib.rs  lifetime_tracker.rs  pipeline.rs  pool.rs  presenter.rs  query.rs  queue.rs  renderer.rs  renderpass.rs  resource.rs  rt.rs  shared.rs  staging.rs  surface.rs  swapchain.rs  sync.rs  texture.rs  thread_manager.rs  transfer.rs
graphics/webgl/: Cargo.toml
graphics/webgl/src/: backend.rs  buffer.rs  command.rs  device.rs  instance.rs  lib.rs  messages.rs  pipeline.rs  raw_context.rs  rt.rs  spinlock.rs  surface.rs  sync.rs  texture.rs  thread.rs
graphics/webgpu/: Cargo.toml
graphics/webgpu/.cargo/: config.toml
graphics/webgpu/src/: adapter.rs  backend.rs  binding.rs  buffer.rs  command.rs  device.rs  instance.rs  lib.rs  pipeline.rs  query.rs  queue.rs  sampler.rs  shared.rs  stubs.rs  surface.rs  swapchain.rs  texture.rs
platform/android/lib/: Cargo.toml  build.rs
platform/sdl/: .gitignore  Cargo.toml  build.rs  rebuild_shaders.sh  rustfmt.toml  vk_layer_settings.txt
platform/sdl/src/: input.rs  io.rs  lib.rs  main.rs  sdl_metal.rs  sdl_platform.rs  sdl_vulkan.rs
platform/sdl_desktop/: Cargo.toml  build.rs
platform/sdl_desktop/src/: main.rs
platform/web/lib/: .gitignore  Cargo.toml  LICENSE_MIT  build.rs
valve_formats/bsp/: Cargo.toml
valve_formats/bsp/src/: lib.rs  lump.rs  map.rs  map_header.rs  read_util.rs  util.rs
(+319 files in other folders)
