[workspace]
exclude = [
    "vendor/"
]
members = [
    "core",
    "engine",
    "graphics/vulkan",
    "graphics/metal",
    "game",
    "build_util",
    "platform/sdl",
    "platform/web/lib",
    "graphics/webgpu",
    "io_util",
]
resolver = "2"
default-members = [
    "platform/sdl"
]

[profile.debugopt]
inherits = "release"
debug = true
