[package]
name = "build-util"
version = "0.1.0"
edition = "2021"

[dependencies]
cargo_metadata = "0.15.2"
pathos = "0.3.0"
log = "0.4.17"
spirv_cross_sys = { path = "../vendor/spirv-cross-sys", features = [ "msl", "hlsl" ] }
serde_json = "1.0"
sourcerenderer_core = { path = "../core" }
bitflags = "2.5.0"
