[package]
name = "sourcerenderer_core"
version = "0.1.0"
authors = ["Robin Kertels <robin.kertels@gmail.com>"]
edition = "2018"

[dependencies]
nalgebra = "0.31.1"
bitflags = "1.2.1"
bitset-core = "0.1.1"
crossbeam-channel = "0.5.6"
crossbeam-queue = "0.3.6"
crossbeam-deque = "0.8.2"
crossbeam-utils = "0.8.11"
num_cpus = "1.13.0"
rayon = "1.4.1"
smallvec = { version = "1.8.0", features = [ "union", "const_generics", "const_new" ] }
