[package]
name = "sourcerenderer_core"
version = "0.1.0"
authors = ["Robin Kertels <robin.kertels@gmail.com>"]
edition = "2021"

[dependencies]
bitflags = "2.8"
bitset-core = "0.1"
crossbeam-channel = "0.5"
crossbeam-queue = "0.3"
crossbeam-deque = "0.8"
crossbeam-utils = "0.8"
num_cpus = "1.16"
smallvec = { version = "1.13", features = [ "union", "const_generics", "const_new" ] }
serde = { version = "1.0", features = ["derive"] }
smartstring = "1.0"
futures-io = "0.3"

bevy_math = "0.15"
bevy_log = "0.15"

[features]
default = ["single_thread_gpu_api"]
single_thread_gpu_api = []
