[package]
name = "sourcerenderer_engine"
version = "0.1.0"
authors = ["Robin Kertels <robin.kertels@gmail.com>"]
edition = "2021"

[dependencies]
num_cpus = "1.16.0"
atomic_refcell = "0.1.13"
sourcerenderer_core = { path = "../core" }
image = "0.25.0"
crossbeam-channel = "0.5.12"
crossbeam-utils = "0.8.19"
sourcerenderer_bsp = { path = "../valve_formats/bsp" }
sourcerenderer_vpk = { path = "../valve_formats/vpk" }
sourcerenderer_vtf = { path = "../valve_formats/vtf" }
sourcerenderer_vmt = { path = "../valve_formats/vmt" }
sourcerenderer_mdl = { path = "../valve_formats/mdl" }
sourcerenderer_vtx = { path = "../valve_formats/vtx" }
sourcerenderer_vvd = { path = "../valve_formats/vvd" }
regex = "1.10.3"
bitvec = "1.0.1"
rayon = "1.9.0"
smallvec = { version = "1.13.1", features = [ "union", "const_generics", "const_new" ] }
gltf = { version = "1.4.0", features = ["KHR_lights_punctual"] }
rand = "0.8.5"
bitset-core = "0.1.1"
instant = "0.1.12"
log = "0.4.21"
rapier3d = { version = "0.21.0", features = [ "enhanced-determinism", "f32" ] }
half = "2.4.0"
profiling = "1.0.15"
field-offset = "0.3.6"
widestring = "1.0.2"
bitflags = "2.4.2"
imgui = "0.12.0"
thread_local = "1.1.8"
serde_json = "1.0"
smartstring = "1.0.1"

bevy_app = "0.14.2"
bevy_math = "0.14.2"
bevy_ecs = "0.14.2"
bevy_transform = "0.14.2"
bevy_hierarchy = "0.14.2"
bevy_log = "0.14.2"
bevy_tasks = "0.14.2"
bevy_utils = "0.14.2"
bevy_core = "0.14.2"
bevy_time = "0.14.2"
bevy_input = "0.14.2"

# bevy_ecs has a dependency on async-executor which itself has a dependency on an ancient version of slab that no longer builds on modern rust versions.
# This forces Cargo to use a more recent version of Slab.
slab = "=0.4.9"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
fsr2 = { path = "../vendor/fsr2" }

[features]
default = ["threading", "late-latching"]
late-latching = []
threading = []
# threading = [] Legion relies on thread parking atm
web = ["instant/wasm-bindgen", "instant/inaccurate", "rapier3d/wasm-bindgen"]
profile = [ "profiling/profile-with-optick" ]

[profile.release]
debug = true
