[package]
name = "sourcerenderer_game"
version = "0.1.0"
edition = "2021"

[dependencies]
sourcerenderer_core = { path = "../core" }
sourcerenderer_engine = { path = "../engine", default-features = false }
bevy_app = "0.15.1"
bevy_math = "0.15.1"
bevy_ecs = "0.15.1"
bevy_transform = "0.15.1"
bevy_hierarchy = "0.15.1"
bevy_log = "0.15.1"
bevy_tasks = "0.15.1"
bevy_utils = "0.15.1"
bevy_core = "0.15.1"
bevy_time = "0.15.1"
bevy_input = "0.15.1"
