[package]
name = "sourcerenderer_game"
version = "0.1.0"
edition = "2021"

[dependencies]
sourcerenderer_core = { path = "../core" }
sourcerenderer_engine = { path = "../engine", default-features = false }
log = "0.4.25"
bevy_app = "0.16"
bevy_math = { version = "0.16", features = ["serialize"] }
bevy_ecs = "0.16"
bevy_transform = "0.16"
bevy_log = "0.16"
bevy_tasks = "0.16"
bevy_utils = "0.16"
bevy_time = "0.16"
bevy_input = "0.16"
