[package]
name = "sourcerenderer_d3d12"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = { version = "0.54.0", features = [ "Win32_Graphics_Direct3D", "Win32_Graphics_Direct3D12", "Win32_Graphics_Dxgi", "Win32_Graphics_Dxgi_Common" ] }
sourcerenderer_core = { path = "../../core" }
bitflags = "2.4.2"
thread_local = "1.1.8"
crossbeam-channel = "0.5.12"
smallvec = { version = "1.13.1", features = [ "union", "const_generics", "const_new" ] }
widestring = "1.0.2"
