[package]
name = "metal_renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
metal = "0.27.0"
objc = "0.2.7"
block = "0.1.6"
sourcerenderer_core = { path = "../../core" }
bitflags = "2.4.2"
smallvec = { version = "1.13.1", features = [ "union", "const_generics", "const_new" ] }
