[package]
name = "sourcerenderer_vulkan"
version = "0.1.0"
authors = ["Robin Kertels <robin.kertels@gmail.com>"]
edition = "2018"

[dependencies]
ash = "0.37.2+1.3.251"
sourcerenderer_core = { path = "../../core" }
bitflags = "2.4.2"
thread_local = "1.1.8"
crossbeam-channel = "0.5.12"
smallvec = { version = "1.13.1", features = [ "union", "const_generics", "const_new" ] }
rayon = "1.9.0"
crossbeam-utils = "0.8.19"
parking_lot = "0.12.1"
spirv_cross_sys = { path = "../../vendor/spirv-cross-sys" }
