[package]
name = "sourcerenderer_vulkan"
version = "0.1.0"
authors = ["Robin Kertels <robin.kertels@gmail.com>"]
edition = "2021"
build = "build.rs"

[dependencies]
ash = "0.38"
sourcerenderer_core = { path = "../../core" }
bitflags = "2.8"
thread_local = "1.1"
crossbeam-channel = "0.5"
smallvec = { version = "1.14", features = [ "union", "const_generics", "const_new" ] }
crossbeam-utils = "0.8"
parking_lot = "0.12"
serde_json = "1.0"
log = "0.4"

[build-dependencies]
build-util = { path = "../../build_util" }
