[package]
name = "sourcerenderer_webgl"
version = "0.1.0"
authors = ["Robin Kertels <robin.kertels@gmail.com>"]
edition = "2018"

[dependencies]
js-sys = "0.3.48"
wasm-bindgen = "0.2.71"
sourcerenderer_core = { path = "../../core" }
crossbeam-channel = "0.5.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlRenderingContext',
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'WebGlTexture',
  'WebGlProgram',
  'Window',
  'DedicatedWorkerGlobalScope',
  'WebglCompressedTextureS3tc',
  'WebGlActiveInfo'
]
