[package]
name = "sourcerenderer_sdl"
version = "0.1.0"
authors = ["Robin Kertels <robin.kertels@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
sdl2 = "0.35.1"
sdl2-sys = "0.35.1"
ash = "0.37.0+1.3.209"
bitset-core = "0.1.1"
sourcerenderer_bsp = { path = "../../valve_formats/bsp" }
sourcerenderer_core = { path = "../../core" }
sourcerenderer_vulkan = { path = "../../graphics/vulkan" }
sourcerenderer_engine = { path = "../../engine" }
lazy_static = "1.4.0"
simple_logger = "2.1.0"
