[package]
name = "sourcerenderer_sdl"
version = "0.1.0"
authors = ["Robin Kertels <robin.kertels@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
sdl2 = { version = "0.37.0", features = [ "raw-window-handle" ] }
sdl2-sys = "0.37.0"
raw-window-handle = "0.6.2"
bitset-core = "0.1.1"
sourcerenderer_bsp = { path = "../../valve_formats/bsp" }
sourcerenderer_core = { path = "../../core" }
sourcerenderer_engine = { path = "../../engine" }
lazy_static = "1.4.0"
simple_logger = "5.0.0"
notify = "6.1.1"
crossbeam-channel = "0.5.12"
log = "0.4.17"
bevy_input = "0.14.2"
bevy_ecs = "0.14.2"
bevy_tasks = "0.14.2"
sourcerenderer_game = { path = "../../game" }
async-fs = "2.1.2"

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.29.0"
objc = "0.2.7"
sourcerenderer_metal = { path = "../../graphics/metal" }

[target.'cfg(not(target_os = "macos"))'.dependencies]
ash = "0.38.0+1.3.281"
sourcerenderer_vulkan = { path = "../../graphics/vulkan" }

[build-dependencies]
build-util = { path = "../../build_util" }
pkg-config = "0.3.30"
log = "0.4.17"

[profile.release]
debug = true
