[package]
name = "sourcerenderer_sdl"
version = "0.1.0"
authors = ["Robin Kertels <robin.kertels@gmail.com>"]
edition = "2021"
build = "build.rs"

[dependencies]
sdl2 = { version = "0.37", features = [ "raw-window-handle" ] }
sdl2-sys = "0.37"
raw-window-handle = "0.6"
bitset-core = "0.1"
sourcerenderer_bsp = { path = "../../valve_formats/bsp" }
sourcerenderer_core = { path = "../../core" }
sourcerenderer_engine = { path = "../../engine" }
lazy_static = "1.4"
simple_logger = "5.0"
notify = "8.0"
crossbeam-channel = "0.5"
log = "0.4"
bevy_input = "0.15"
bevy_ecs = "0.15"
bevy_tasks = "0.15"
sourcerenderer_game = { path = "../../game" }
async-fs = "2.1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-metal = "0.3"
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-quartz-core = "0.3.0"
sourcerenderer_metal = { path = "../../graphics/metal" }

[target.'cfg(not(target_os = "macos"))'.dependencies]
ash = "0.38"
sourcerenderer_vulkan = { path = "../../graphics/vulkan" }

[build-dependencies]
build-util = { path = "../../build_util" }
pkg-config = "0.3"
log = "0.4"

[profile.debugopt]
inherits = "release"
debug = true
