[package]
name = "sourcerenderer_sdl_desktop"
version = "0.1.0"
authors = ["Robin Kertels <robin.kertels@gmail.com>"]
build = "build.rs"
edition = "2018"

[dependencies]
sourcerenderer_sdl = { path = "../sdl" }
sourcerenderer_engine = { path = "../../engine" }
sourcerenderer_core = { path = "../../core" }

