[package]
name = "sourcerenderer_bsp"
version = "0.1.0"
authors = ["Robin Kertels <robin.kertels@gmail.com>"]
edition = "2018"

[dependencies]
bitflags = "2.4.2"
bevy_math = "0.15.1"
zip = { version = "2.1.3", default-features = false, default_features = false, features = ["deflate"] }
io_util = { path = "../../io_util" }
