[package]
name = "sourcerenderer_android"
version = "0.1.0"
authors = ["Robin Kertels <robin.kertels@gmail.com>"]
edition = "2018"
build = "build.rs"

[lib]
name = "sourcerenderer"
crate-type = ["cdylib"]

[dependencies]
ash = "0.37.0+1.3.209"
sourcerenderer_engine = { path = "../../../engine" }
sourcerenderer_core = { path = "../../../core" }
sourcerenderer_vulkan = { path = "../../../graphics/vulkan" }
ndk = "0.6.0"
ndk-sys = "0.3.0"
jni = "0.19.0"
libc = "0.2.84"
parking_lot = "0.12.0"
lazy_static = "1.4.0"
