[package]
name = "sourcerenderer_android"
version = "0.1.0"
authors = ["Robin Kertels <robin.kertels@gmail.com>"]
edition = "2018"
build = "build.rs"

[lib]
name = "sourcerenderer"
crate-type = ["cdylib"]

[dependencies]
ash = "0.38.0+1.3.281"
sourcerenderer_engine = { path = "../../../engine" }
sourcerenderer_core = { path = "../../../core" }
sourcerenderer_vulkan = { path = "../../../graphics/vulkan" }
ndk = "0.9.0"
ndk-sys = "0.6.0+11769913"
jni = "0.21.1"
libc = "0.2.153"
parking_lot = "0.12.1"
lazy_static = "1.4.0"
crossbeam-channel = "0.5.12"
android_log = "0.1.3"

[build-dependencies]
build-util = { path = "../../../build_util" }

[profile.release]
debug = true
