[package]
name = "sourcerenderer_android"
version = "0.1.0"
authors = ["Robin Kertels <robin.kertels@gmail.com>"]
edition = "2021"
build = "build.rs"

[lib]
name = "sourcerenderer"
crate-type = ["cdylib"]

[dependencies]
ash = "0.38"
sourcerenderer_engine = { path = "../../../engine" }
sourcerenderer_core = { path = "../../../core" }
sourcerenderer_vulkan = { path = "../../../graphics/vulkan" }
ndk = "0.9"
ndk-sys = "0.6"
jni = "0.21"
libc = "0.2"
parking_lot = "0.12"
lazy_static = "1.5"
crossbeam-channel = "0.5"
android_log = "0.1"

[build-dependencies]
build-util = { path = "../../../build_util" }

[profile.release]
debug = true
